--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
 	"description": "goal-setting application",
 	"main": "index.js",
 	"scripts": {
-		"start": "node backend/server.js",
-		"server": "nodemon backend/server.js"
+		"start": "node api/index.js",
+		"server": "nodemon api/index.js"
 	},
 	"author": "Nestor",
 	"license": "MIT",
